# Loli_Music_Game

./: CMakeLists.txt  README.md  main.cpp
Account/: User.cpp  User.hpp
Character/: Loli.cpp  Loli.hpp
Enemy/: Enemy.cpp  Enemy.hpp  HoldEnemy.cpp  HoldEnemy.hpp  TapEnemy.cpp  TapEnemy.hpp  ouobEnemy.cpp  ouobEnemy.hpp
Engine/: GameEngine.hpp  Group.cpp  Group.hpp  IControl.cpp  IControl.hpp  Sprite.cpp
Resource/: ALice.txt  accountlist.txt
Resource/account-status/: guest.loli  guest.txt  gugugu.loli  thanksone.loli
Resource/audios/songs/: songlist.txt
Resource/images/characters/: characterlist.txt
Resource/scores/: Itogite_in.loli  MeikyuLyrith_ez.loli  MeikyuLyrith_hd.loli  MeikyuLyrith_in.loli  astronomia_in.loli  lastpiecenishukufutoeikowo_in.loli
Resource/songs/: songlist.txt
Scene/: CharacterSelectScene.cpp  CharacterSelectScene.hpp  EditScene.cpp  EditScene.hpp  FileSelectScene.cpp  FileSelectScene.hpp  LoginScene.cpp  LoginScene.hpp  LoseScene.hpp  MainScene.cpp  MainScene.hpp  PlayScene.cpp  PlayScene.hpp  RegisterScene.cpp  RegisterScene.hpp  ScoreboardScene.cpp  ScoreboardScene.h  SelectFileScene.hpp  SettingsScene.cpp  SettingsScene.hpp  SongSelectScene.cpp  SongSelectScene.hpp  StageSelectScene.cpp  StageSelectScene.hpp  StartScene.cpp  StartScene.h  WinScene.cpp  WinScene.hpp
Turret/: Turret.cpp  Turret.hpp
UI/Animation/: DirtyEffect.cpp  OnlineJudge.cpp  OnlineJudge.hpp
UI/Component/: Slider.cpp  Slider.hpp
